fpac (3.27.17)
	* Merged some fixes in for FLEX to get it working better
	* Updated fpac.spec file to check OS and select build dependencies better
	* Bernard updated the included How-TO to version 1.75

 -- Lee Woldanski <ve7fet@tparc.org> Mon, 07 Mar 2011 10:00:00 -0800

fpac (3.27.16)
	* Bug in expanding variables in conf files with make corrected
	* Added some variables to configure.ac to split apart the version for package building
	* Added a fpac.spec file to build RPM's with
	* Leo, IZ5FSA, has a done a bunch of work on the FLEX code to get it working again
	  (still more work in progress)
	* Bernard, F6BVP, has made some debugging changes

 -- Lee Woldanski <ve7fet@tparc.org>  Mon, 31 Jan 2011 22:00:00 -0800

fpac (3.27.15)
	* Rolling Bernards changes into an incremental release
	* Updated sources to use GNU autotools (makes portability using ./configure script)
	* Removed un-used source files not linked to any program
	* Removed #define OLD_AX25 support, builds against current libax25-0.0.12rc2
	* Changed functions rose2asc and ax2asc in wp/wpconvert.c to rose_ntoa and ax25_ntoa, respectively
	* Note wpconvert is not installed by default
	* .conf files are now processed by make to update necessary paths
	* `make install' will install all binaries, fpac/help files, docs, as well as sbin/fpac.sh, sbin/versions, 
	  var/ax25/fpac/loggedin, var/ax25/flex/gateways, and var/ax25/flex/destinations
	* `make installconf' will install all default configuration files in /etc/ax25
	* Changed error message in fpacnode when <3 fpac nodes or routes have been defined
	* Changed usage message for white pages to specify correct wp database file
	* Checked includes with splint (www.splint.org) in sources and commented out unnecessary headers
	* Verified ./configure header/library checks

 -- Lee Woldanski <ve7fet@tparc.org>  Fri, 7 Jan 2011 23:00:00 -0800 

fpac (3.27.14-pre32)